syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractAlertDescriptorOneOfType";

import "sdc/biceps/abstractalertdescriptor.proto";
import "sdc/biceps/alertconditiondescriptoroneof.proto";
import "sdc/biceps/alertsignaldescriptor.proto";
import "sdc/biceps/alertsystemdescriptor.proto";

message AbstractAlertDescriptorOneOf {
  oneof abstract_alert_descriptor_one_of {
    AbstractAlertDescriptor abstract_alert_descriptor = 1;
    AlertConditionDescriptorOneOf alert_condition_descriptor_one_of = 2;
    AlertSignalDescriptor alert_signal_descriptor = 3;
    AlertSystemDescriptor alert_system_descriptor = 4;
  }
}
